--- a/src/app/client/mes-clients/mes-clients.component.html
+++ b/src/app/client/mes-clients/mes-clients.component.html
@@ -17,7 +17,7 @@
                             <div class="card">
                                 <div class="card-body text-center">
                                     <h4 class="card-title">{{client.prenom}}</h4>
-                                    <p class="card-text">TelephoneMobile : {{client.telephoneMobile}}</p>
+                                    <p class="card-text">TelephoneMobile :{{client.telephoneMobile}}</p>
                                 </div>
                                 <div  *ngIf="showdetail" class="card">
                                         <div class="card-body text-center mt-4">
@@ -53,3 +53,30 @@
     </div>
 </section>
 <!-- Team -->
+
+<!-- demand edite -->
+<div class="tab-content">
+        <div clase="col-sm-8" *ngIf="showdetail">
+          <form (ngSubmit)="validerModification(f)" #f="ngForm">
+             <!-- for Name -->  
+             <div class="form-group , col-lg-5">
+                <label for="idClient"></label>
+                <input  name="idClient" class="form-control" id="idClient" [value]="clients.idClient" [(ngModel)]="clients.idClient" disabled="disabled">
+              </div><br/><br/><br/><br/>
+  
+                <!-- for age -->            
+            <div class="form-group , col-lg-5">
+                <label for="prenom">Prenom</label>
+                <input  name="prenom" class="form-control" id="prenom" [value]="clients.prenom" [(ngModel)]="clients.prenom">
+              </div>
+              <br/><br/><br/><br/>
+                    <!-- for Name -->            
+                    <div class="form-group, col-lg-5">
+                    <label for="nom">Nom</label>
+                    <input name="nom" class="form-control" id="nom" [value]="clients.nom" [(ngModel)]="clients.nom">
+               </div><br/><br/><br/><br/> 
+           <button type="submit" class="btn btn-primary" >Modifier</button> <br/><br/><br/>
+          </form>
+        </div>
+        </div>
+  
