--- a/src/app/employee/mes-emplyes/mes-emplyes.component.html
+++ b/src/app/employee/mes-emplyes/mes-emplyes.component.html
@@ -4,17 +4,17 @@
 <!------ Include the above in your HEAD tag ---------->
 
 <!-- Team -->
-<section id="team" class="pb">
+<!-- <section id="team" class="pb">
     <div class="container">
-        <div class="row">
+        <div class="row"> -->
             <!-- Team member -->
-            <div class="col-xs-7 col-sm-6 col-md-3"  *ngFor="let employee of listeEmploye">
-<!--                 <div class="image-flip" ontouchstart="this.classList.toggle('hover');" >
+<!--             <div class="col-xs-7 col-sm-6 col-md-3"  *ngFor="let employee of listeEmploye">
+ --><!--                 <div class="image-flip" ontouchstart="this.classList.toggle('hover');" >
  -->                    
-                     <div>
-                      <div>
+                    <!--  <div>
+                      <div> -->
 <!--                       <div class="mainflip" >
- -->                        <div class="frontside">
+ -->                     <!--    <div class="frontside">
                             <div class="card">
                                 <div class="card-body text-center">
                                     <p><img  src={{uploadPhotoEmployer(employee.photo)}} class="img-circle"  width="94" height="66"></p>
@@ -54,14 +54,14 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- ./Team member -->
            
             <!-- ./Team member -->
-
+<!-- 
         </div>
     </div>
-</section>
+</section> -->
 <!-- Team -->
 
 
@@ -69,4 +69,23 @@
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
 <!------ Include the above in your HEAD tag ---------->
-
+<div class="well col-sm-8 text-left"> 
+        <div class="container">
+                          <div class="messaging">
+                              <div class="inbox_msg">
+                                  <div class="inbox_chat">
+                                        <div class="chat_ "  *ngFor="let employee of listeEmploye">
+                                                <div class="chat_people">
+                                                  <div class="chat_img"> <img  src={{uploadPhotoEmployer(employee.photo)}} alt="sunil"></div>
+                                                  <div class="chat_ib">
+                                                    <h5>{{employee.prenom}} {{employee.nom}}               <span class="date"> {{employee.dateNaissance}} </span></h5>
+                                                    <p>{{employee.adresse}}, {{employee.religion}}  
+                                                      astrology under one roof.</p>
+                                                </div>
+                                        </div>
+                                </div>
+                        </div>
+                 </div>
+            </div>
+     </div>
+</div>     
