--- a/src/app/Adm/espace-admin/espace-admin.component.html
+++ b/src/app/Adm/espace-admin/espace-admin.component.html
@@ -18,8 +18,7 @@
         <ul class="nav navbar-nav navbar-right"  >
             <li ><a  ><span class="glyphicon glyphicon-comment"></span> Messagerie</a></li>
             <li><a  (click)="visibiliteEmployes()"><span class="glyphicon glyphicon-user"></span> Employes</a></li>
-            <li><a href="#"><span class="glyphicon glyphicon-briefcase"></span> Client</a></li>
-            <li><a href="#"><span class="glyphicon glyphicon-book"></span> Demande</a></li>
+            <li><a (click)="visibiliteClients()"><span class="glyphicon glyphicon-briefcase"></span> Client</a></li>
             <li><a href="#"><span class="glyphicon glyphicon-cog"></span> Configuration</a></li>
             <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Déconnexion</a></li>
         </ul>
@@ -65,7 +64,10 @@
           <li><a  (click)="nouvelEmployer()"><span class="glyphicon glyphicon-plus"></span> Nouvel Employe</a></li><br>
            <li><a (click)="listEmployer()"><span class="glyphicon glyphicon-list"></span> Liste Employés</a></li><br>
            <li><a (click)="rechercheEmployer()"><span class="glyphicon glyphicon-search"></span> Recherche</a></li><br>
-           <li><a (click)="statiqueEmployer()"><span class="glyphicon glyphicon-signal"></span> Statistiques</a></li><br>
+         
+              <!--  <input [(ngModel)]="recherche" type="text" class="sr-input" placeholder="Recherche" (click)="faireRecherche()" (change)="touchRecherche()">
+               <button class="btn sr-btn" type="button"><i class="fa fa-search"></i></button> -->
+             <li><a (click)="statiqueEmployer()"><span class="glyphicon glyphicon-signal"></span> Statistiques</a></li><br>
         </ul>
       </div>
       <!-- centreEmplyer -->
@@ -77,7 +79,7 @@
                                               <div class="chat_ ">
                                                 <app-mes-emplyes *ngIf="listeEmployer"></app-mes-emplyes>
                                                 <app-inscription *ngIf="newEmployer"></app-inscription>
-                                                <app-tape-plus *ngIf="recherche"></app-tape-plus>
+                                                <app-recherche-emp-adm *ngIf="recherche"></app-recherche-emp-adm>
 
                               </div>
                        </div>
@@ -101,28 +103,39 @@
       <div class="row content">
         <div class="col-sm-2 sidenav">
           <ul class="sid" >
-            <li><a ><span class="glyphicon glyphicon-plus"></span> Nouvel Client</a></li><br>
-             <li><a ><span class="glyphicon glyphicon-list"></span> Liste Clients</a></li><br>
-             <li><a ><span class="glyphicon glyphicon-search"></span> Recherche</a></li><br>
-             <li><a ><span class="glyphicon glyphicon-signal"></span> Statistiques</a></li><br>
+<!--             <li><a (click)="nouveauClient()"><span class="glyphicon glyphicon-plus"></span> Nouvel Client</a></li><br>
+ -->             <li><a (click)="listeClient()" ><span class="glyphicon glyphicon-list"></span> Liste Clients</a></li><br>
+                <li><a (click)="demandeClient()"><span class="glyphicon glyphicon-book"></span> Demandes</a></li><br>
+
+              <li><a (click)="rechercheClient()" ><span class="glyphicon glyphicon-search"></span> Recherche</a></li><br> 
+             <li><a (click)="statistiqueClient()"><span class="glyphicon glyphicon-signal"></span> Statistiques</a></li><br>
           </ul>
         </div>
       <!-- fin side -->
-      <div class="col-sm-8 text-left"> 
-        <h1>Welcome</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <hr>
-        <h3>Test</h3>
-        <p>Lorem ipsum...</p>
+      <!-- centreEmplyer -->
+      <div class="well col-sm-8 text-left" *ngIf="afficheClient"> 
+          <div class="container">
+               <div class="messaging">
+                   <div class="inbox_msg">
+                       <div class="inbox_chat">
+                             <div class="chat_ ">
+                               <app-mes-clients *ngIf="listeClients"></app-mes-clients>
+                               <app-inscription *ngIf="demandeClients"></app-inscription>
+                               <app-recherche-cli-adm *ngIf="rechercheClients"></app-recherche-cli-adm>
+             </div>
       </div>
-      <div class="col-sm-2 sidenav">
-        <!-- <div class="well">
-          --  --
-        </div>
-        <div class="well">
-          --  --
-        </div> -->
-      </div>
+ </div>
+</div>
+</div>   
+</div>  
+<div class="col-sm-2 sidenav" *ngIf="afficheClient">
+<!-- <div class="well">
+--  --
+</div>
+<div class="well">
+--  --
+</div> -->
+       </div>
     </div>
   </div>
 
