--- a/src/app/client/nouvelle-demande/nouvelle-demande.component.scss
+++ b/src/app/client/nouvelle-demande/nouvelle-demande.component.scss
@@ -114,6 +114,11 @@
            font-size: 10px;
 
         }
+        #listeEmployes
+        {
+           margin-top: 40px;
+          
+        }
 /*    ---------------------FIN--------------------------
     :: CSS Pour le Div Permettant de Lister les Employes
     -------------------------------------------------- */
